crates/observed_macros_impl/tests/snapshots/expansion__dimension_routes_the_log_and_metric_signals_independently.snap
---
source: crates/observed_macros_impl/tests/expansion.rs
expression: "expand_event(r#\"\"request\"\"#,\nr#\"\n            #[info]\n            struct Request {\n                #[dimension]\n                explicit_default: ClassifiedString,\n                #[dimension(log = \"renamed\")]\n                renamed: ClassifiedString,\n                #[dimension(log = exclude)]\n                hidden: ClassifiedString,\n                #[dimension(metric)]\n                #[unredacted]\n                shard: i64,\n                #[dimension(metric = \"region.key\")]\n                #[unredacted]\n                region: i64,\n                #[dimension(log = \"http.status\", metric = \"status\")]\n                #[unredacted]\n                status: i64,\n                #[dimension(log = exclude, metric)]\n                #[unredacted]\n                internal: i64,\n            }\n            \"#,)"
---
struct Request {
    explicit_default: ClassifiedString,
    renamed: ClassifiedString,
    hidden: ClassifiedString,
    shard: i64,
    region: i64,
    status: i64,
    internal: i64,
}
const _: () = {
    impl ::observed::Event for Request {
        const DESCRIPTION: ::observed::metadata::EventDescription = ::observed::metadata::EventDescription::new(
            "request",
            ::core::option::Option::Some(::core::any::TypeId::of::<Request>()),
            ::core::option::Option::Some(
                ::observed::metadata::LogDescription::new(
                    "request",
                    ::observed::Severity::Info,
                    ::core::option::Option::None,
                ),
            ),
            ::core::option::Option::None,
            false,
            false,
        );
        fn visit_fields(
            &self,
            visitor: &mut ::observed::processing::FieldVisitorFn<'_>,
        ) -> ::core::ops::ControlFlow<()> {
            {
                const FIELD_DESC: ::observed::metadata::FieldDescriptor = ::observed::metadata::FieldDescriptor::new(
                    "explicit_default",
                    ::core::option::Option::Some(
                        ::observed::metadata::LogFieldEntry::new("explicit_default"),
                    ),
                    ::core::option::Option::None,
                );
                visitor(
                    &FIELD_DESC,
                    &|engine| ::observed::Value::from_redacted(
                        &self.explicit_default,
                        engine,
                    ),
                )?;
            }
            {
                const FIELD_DESC: ::observed::metadata::FieldDescriptor = ::observed::metadata::FieldDescriptor::new(
                    "renamed",
                    ::core::option::Option::Some(
                        ::observed::metadata::LogFieldEntry::new("renamed"),
                    ),
                    ::core::option::Option::None,
                );
                visitor(
                    &FIELD_DESC,
                    &|engine| ::observed::Value::from_redacted(&self.renamed, engine),
                )?;
            }
            {
                const FIELD_DESC: ::observed::metadata::FieldDescriptor = ::observed::metadata::FieldDescriptor::new(
                    "shard",
                    ::core::option::Option::Some(
                        ::observed::metadata::LogFieldEntry::new("shard"),
                    ),
                    ::core::option::Option::Some(
                        ::observed::metadata::MetricFieldEntry::dimension("shard"),
                    ),
                );
                visitor(&FIELD_DESC, &|_| ::observed::Value::from(self.shard.clone()))?;
            }
            {
                const FIELD_DESC: ::observed::metadata::FieldDescriptor = ::observed::metadata::FieldDescriptor::new(
                    "region",
                    ::core::option::Option::Some(
                        ::observed::metadata::LogFieldEntry::new("region"),
                    ),
                    ::core::option::Option::Some(
                        ::observed::metadata::MetricFieldEntry::dimension("region.key"),
                    ),
                );
                visitor(&FIELD_DESC, &|_| ::observed::Value::from(self.region.clone()))?;
            }
            {
                const FIELD_DESC: ::observed::metadata::FieldDescriptor = ::observed::metadata::FieldDescriptor::new(
                    "status",
                    ::core::option::Option::Some(
                        ::observed::metadata::LogFieldEntry::new("http.status"),
                    ),
                    ::core::option::Option::Some(
                        ::observed::metadata::MetricFieldEntry::dimension("status"),
                    ),
                );
                visitor(&FIELD_DESC, &|_| ::observed::Value::from(self.status.clone()))?;
            }
            {
                const FIELD_DESC: ::observed::metadata::FieldDescriptor = ::observed::metadata::FieldDescriptor::new(
                    "internal",
                    ::core::option::Option::None,
                    ::core::option::Option::Some(
                        ::observed::metadata::MetricFieldEntry::dimension("internal"),
                    ),
                );
                visitor(
                    &FIELD_DESC,
                    &|_| ::observed::Value::from(self.internal.clone()),
                )?;
            }
            ::core::ops::ControlFlow::Continue(())
        }
    }
};
