crates/observed_macros_impl/tests/snapshots/expansion__every_severity_attribute_maps_to_its_own_variant.snap
---
source: crates/observed_macros_impl/tests/expansion.rs
expression: "report([\"trace\", \"debug\", \"info\", \"warning\", \"error\",\n\"fatal\"].into_iter().map(|attribute|\n(format!(\"#[{attribute}]\"),\nexpand_event(r#\"\"severity\"\"#, &format!(\"#[{attribute}] {ONE_FIELD}\")),)))"
---
==== #[trace] ====
struct Subject {
    v: u64,
}
const _: () = {
    impl ::observed::Event for Subject {
        const DESCRIPTION: ::observed::metadata::EventDescription = ::observed::metadata::EventDescription::new(
            "severity",
            ::core::option::Option::Some(::core::any::TypeId::of::<Subject>()),
            ::core::option::Option::Some(
                ::observed::metadata::LogDescription::new(
                    "severity",
                    ::observed::Severity::Trace,
                    ::core::option::Option::None,
                ),
            ),
            ::core::option::Option::None,
            false,
            false,
        );
        fn visit_fields(
            &self,
            visitor: &mut ::observed::processing::FieldVisitorFn<'_>,
        ) -> ::core::ops::ControlFlow<()> {
            {
                const FIELD_DESC: ::observed::metadata::FieldDescriptor = ::observed::metadata::FieldDescriptor::new(
                    "v",
                    ::core::option::Option::Some(
                        ::observed::metadata::LogFieldEntry::new("v"),
                    ),
                    ::core::option::Option::None,
                );
                visitor(&FIELD_DESC, &|_| ::observed::Value::from(self.v.clone()))?;
            }
            ::core::ops::ControlFlow::Continue(())
        }
    }
};

==== #[debug] ====
struct Subject {
    v: u64,
}
const _: () = {
    impl ::observed::Event for Subject {
        const DESCRIPTION: ::observed::metadata::EventDescription = ::observed::metadata::EventDescription::new(
            "severity",
            ::core::option::Option::Some(::core::any::TypeId::of::<Subject>()),
            ::core::option::Option::Some(
                ::observed::metadata::LogDescription::new(
                    "severity",
                    ::observed::Severity::Debug,
                    ::core::option::Option::None,
                ),
            ),
            ::core::option::Option::None,
            false,
            false,
        );
        fn visit_fields(
            &self,
            visitor: &mut ::observed::processing::FieldVisitorFn<'_>,
        ) -> ::core::ops::ControlFlow<()> {
            {
                const FIELD_DESC: ::observed::metadata::FieldDescriptor = ::observed::metadata::FieldDescriptor::new(
                    "v",
                    ::core::option::Option::Some(
                        ::observed::metadata::LogFieldEntry::new("v"),
                    ),
                    ::core::option::Option::None,
                );
                visitor(&FIELD_DESC, &|_| ::observed::Value::from(self.v.clone()))?;
            }
            ::core::ops::ControlFlow::Continue(())
        }
    }
};

==== #[info] ====
struct Subject {
    v: u64,
}
const _: () = {
    impl ::observed::Event for Subject {
        const DESCRIPTION: ::observed::metadata::EventDescription = ::observed::metadata::EventDescription::new(
            "severity",
            ::core::option::Option::Some(::core::any::TypeId::of::<Subject>()),
            ::core::option::Option::Some(
                ::observed::metadata::LogDescription::new(
                    "severity",
                    ::observed::Severity::Info,
                    ::core::option::Option::None,
                ),
            ),
            ::core::option::Option::None,
            false,
            false,
        );
        fn visit_fields(
            &self,
            visitor: &mut ::observed::processing::FieldVisitorFn<'_>,
        ) -> ::core::ops::ControlFlow<()> {
            {
                const FIELD_DESC: ::observed::metadata::FieldDescriptor = ::observed::metadata::FieldDescriptor::new(
                    "v",
                    ::core::option::Option::Some(
                        ::observed::metadata::LogFieldEntry::new("v"),
                    ),
                    ::core::option::Option::None,
                );
                visitor(&FIELD_DESC, &|_| ::observed::Value::from(self.v.clone()))?;
            }
            ::core::ops::ControlFlow::Continue(())
        }
    }
};

==== #[warning] ====
struct Subject {
    v: u64,
}
const _: () = {
    impl ::observed::Event for Subject {
        const DESCRIPTION: ::observed::metadata::EventDescription = ::observed::metadata::EventDescription::new(
            "severity",
            ::core::option::Option::Some(::core::any::TypeId::of::<Subject>()),
            ::core::option::Option::Some(
                ::observed::metadata::LogDescription::new(
                    "severity",
                    ::observed::Severity::Warn,
                    ::core::option::Option::None,
                ),
            ),
            ::core::option::Option::None,
            false,
            false,
        );
        fn visit_fields(
            &self,
            visitor: &mut ::observed::processing::FieldVisitorFn<'_>,
        ) -> ::core::ops::ControlFlow<()> {
            {
                const FIELD_DESC: ::observed::metadata::FieldDescriptor = ::observed::metadata::FieldDescriptor::new(
                    "v",
                    ::core::option::Option::Some(
                        ::observed::metadata::LogFieldEntry::new("v"),
                    ),
                    ::core::option::Option::None,
                );
                visitor(&FIELD_DESC, &|_| ::observed::Value::from(self.v.clone()))?;
            }
            ::core::ops::ControlFlow::Continue(())
        }
    }
};

==== #[error] ====
struct Subject {
    v: u64,
}
const _: () = {
    impl ::observed::Event for Subject {
        const DESCRIPTION: ::observed::metadata::EventDescription = ::observed::metadata::EventDescription::new(
            "severity",
            ::core::option::Option::Some(::core::any::TypeId::of::<Subject>()),
            ::core::option::Option::Some(
                ::observed::metadata::LogDescription::new(
                    "severity",
                    ::observed::Severity::Error,
                    ::core::option::Option::None,
                ),
            ),
            ::core::option::Option::None,
            false,
            false,
        );
        fn visit_fields(
            &self,
            visitor: &mut ::observed::processing::FieldVisitorFn<'_>,
        ) -> ::core::ops::ControlFlow<()> {
            {
                const FIELD_DESC: ::observed::metadata::FieldDescriptor = ::observed::metadata::FieldDescriptor::new(
                    "v",
                    ::core::option::Option::Some(
                        ::observed::metadata::LogFieldEntry::new("v"),
                    ),
                    ::core::option::Option::None,
                );
                visitor(&FIELD_DESC, &|_| ::observed::Value::from(self.v.clone()))?;
            }
            ::core::ops::ControlFlow::Continue(())
        }
    }
};

==== #[fatal] ====
struct Subject {
    v: u64,
}
const _: () = {
    impl ::observed::Event for Subject {
        const DESCRIPTION: ::observed::metadata::EventDescription = ::observed::metadata::EventDescription::new(
            "severity",
            ::core::option::Option::Some(::core::any::TypeId::of::<Subject>()),
            ::core::option::Option::Some(
                ::observed::metadata::LogDescription::new(
                    "severity",
                    ::observed::Severity::Fatal,
                    ::core::option::Option::None,
                ),
            ),
            ::core::option::Option::None,
            false,
            false,
        );
        fn visit_fields(
            &self,
            visitor: &mut ::observed::processing::FieldVisitorFn<'_>,
        ) -> ::core::ops::ControlFlow<()> {
            {
                const FIELD_DESC: ::observed::metadata::FieldDescriptor = ::observed::metadata::FieldDescriptor::new(
                    "v",
                    ::core::option::Option::Some(
                        ::observed::metadata::LogFieldEntry::new("v"),
                    ),
                    ::core::option::Option::None,
                );
                visitor(&FIELD_DESC, &|_| ::observed::Value::from(self.v.clone()))?;
            }
            ::core::ops::ControlFlow::Continue(())
        }
    }
};
