crates/observed_macros_impl/tests/snapshots/expansion__the_event_attribute_accepts_the_disabled_flag_and_a_trailing_comma.snap
---
source: crates/observed_macros_impl/tests/expansion.rs
expression: "report([r#\"\"e\"\"#, r#\"\"e\",\"#, r#\"\"e\", disabled\"#,\nr#\"\"e\", disabled,\"#].into_iter().map(|attr|\n(format!(\"#[event({attr})]\"), expand_event(attr, ONE_FIELD))))"
---
==== #[event("e")] ====
struct Subject {
    v: u64,
}
const _: () = {
    impl ::observed::Event for Subject {
        const DESCRIPTION: ::observed::metadata::EventDescription = ::observed::metadata::EventDescription::new(
            "e",
            ::core::option::Option::Some(::core::any::TypeId::of::<Subject>()),
            ::core::option::Option::None,
            ::core::option::Option::None,
            false,
            false,
        );
        fn visit_fields(
            &self,
            visitor: &mut ::observed::processing::FieldVisitorFn<'_>,
        ) -> ::core::ops::ControlFlow<()> {
            ::core::ops::ControlFlow::Continue(())
        }
    }
};

==== #[event("e",)] ====
struct Subject {
    v: u64,
}
const _: () = {
    impl ::observed::Event for Subject {
        const DESCRIPTION: ::observed::metadata::EventDescription = ::observed::metadata::EventDescription::new(
            "e",
            ::core::option::Option::Some(::core::any::TypeId::of::<Subject>()),
            ::core::option::Option::None,
            ::core::option::Option::None,
            false,
            false,
        );
        fn visit_fields(
            &self,
            visitor: &mut ::observed::processing::FieldVisitorFn<'_>,
        ) -> ::core::ops::ControlFlow<()> {
            ::core::ops::ControlFlow::Continue(())
        }
    }
};

==== #[event("e", disabled)] ====
struct Subject {
    v: u64,
}
const _: () = {
    impl ::observed::Event for Subject {
        const DESCRIPTION: ::observed::metadata::EventDescription = ::observed::metadata::EventDescription::new(
            "e",
            ::core::option::Option::Some(::core::any::TypeId::of::<Subject>()),
            ::core::option::Option::None,
            ::core::option::Option::None,
            false,
            true,
        );
        fn visit_fields(
            &self,
            visitor: &mut ::observed::processing::FieldVisitorFn<'_>,
        ) -> ::core::ops::ControlFlow<()> {
            ::core::ops::ControlFlow::Continue(())
        }
    }
};

==== #[event("e", disabled,)] ====
struct Subject {
    v: u64,
}
const _: () = {
    impl ::observed::Event for Subject {
        const DESCRIPTION: ::observed::metadata::EventDescription = ::observed::metadata::EventDescription::new(
            "e",
            ::core::option::Option::Some(::core::any::TypeId::of::<Subject>()),
            ::core::option::Option::None,
            ::core::option::Option::None,
            false,
            true,
        );
        fn visit_fields(
            &self,
            visitor: &mut ::observed::processing::FieldVisitorFn<'_>,
        ) -> ::core::ops::ControlFlow<()> {
            ::core::ops::ControlFlow::Continue(())
        }
    }
};
